Bug 1830576 - Update textarea intrinsic height calculations r=dholbert

This change adds a new layout.forms.textarea-sizing-excludes-auto-scrollbar.enabled pref that controls the height calculations for textareas.

With the pref enabled (the default) textareas only include the scrollbar size in the height calculations when overflow-x is scroll, this matches Chromium and WebKit.

Also adds a corresponding WPT for this.

Differential Revision: https://phabricator.services.mozilla.com/D210796